<resources>
    <string name="app_name">Quiz</string>
    <string name="Start">Start</string>
    <string name="title">Do You have what it takes for the test</string>
    <string name="que1">Is pi = 3.14?</string>
    <string name="meque2">Name a triangle whose two angles are equal.</string>
    <string name="meque3">The average of first 50 natural numbers is …………. .</string>
    <string name="me3o1">25.55</string>
    <string name="me3o2">25.5</string>
    <string name="me3o3">25</string>
    <string name="me3o4">12.5</string>
    <string name="True">True</string>
    <string name="False">False</string>
    <string name="score">Score</string>
    <string name="selectDifficulty">Select Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="type">Select Genre</string>
    <string name="anime">Anime</string>
    <string name="maths">Maths</string>
    <string name="right">Right angle triangle</string>
    <string name="isosceles">Isosceles triangle</string>
    <string name="scalene">Scalene triangle</string>
    <string name="none">None of these</string>
    <string name="pythagoras">Pythagoras</string>
    <string name="meq4">Which of the following is true?</string>
    <string name="me4o1">a<sup>2</sup>+b<sup>2</sup>=c<sup>2</sup></string>
    <string name="me4o2">a+b=c</string>
    <string name="meq5">How many lines can pass through 1 point?</string>
    <string name="me5o1">infinite</string>
    <string name="me502">one</string>
    <string name="canttell">can&quot;t say</string>
    <string name="pressBack">Press back key to exit</string>
    <string name="highscore">High score</string>
    <string name="aeq1">Who is Luffy&quot;s first crew mate?</string>
    <string name="zoro">Zoro</string>
    <string name="nami">Nami</string>
    <string name="sanji">Sanji</string>
    <string name="mmq1">Which of the following is true for odd function?</string>
    <string name="mm1o1">f(-x) = -f(x)</string>
    <string name="mm1o2">f(-x) = f(x)</string>
    <string name="instruction">Instruction</string>
    <string name="mmq2">What is sum of two vectors of equal magnitude &quot;A&quot; and opposite to each other?</string>
    <string name="mm2o1">2A</string>
    <string name="mm2o2">-2A</string>
    <string name="mm2o3">0</string>
    <string name="ode">ODE</string>
    <string name="odeT">exact</string>
    <string name="odeF">not-exact</string>
    <string name="mm3">Which of the following condition should be satisfied in order for given equation to be exact?</string>
    <string name="mmq4">Which of the following is true according to Euler&quot;s equation?</string>
    <string name="io1">Option 1</string>
    <string name="io2">Option 2</string>
    <string name="io3">Option 3</string>
    <string name="io4">Option 4</string>
    <string name="mm5">Which of the following gives Integral factor of give equation?</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="about">About</string>
    <string name="aeq2">What is Noriaki Kakyoin&quot;s stand?</string>
    <string name="aeq2o1">Star Platinum</string>
    <string name="aeq2o2">Silver Chariot</string>
    <string name="aeq2o3">Purple Hermit</string>
    <string name="aeq2o4">Hierophant Green</string>
    <string name="aeq3">Which of the following race Rem belong to?</string>
    <string name="aeq3o1">Human</string>
    <string name="aeq3o2">Demon</string>
    <string name="aeq3o3">Elf</string>
    <string name="aeq4">What is Shigaraki Tomura&quot; quirk?</string>
    <string name="aeq4o1">Blade-Tooth</string>
    <string name="aeq4o2">All For One</string>
    <string name="aeq4o3">Decay</string>
    <string name="aeq4o4">Warp Gate</string>
    <string name="aeq5">Which deadly sin is King charged with?</string>
    <string name="aeq5o1">Pride</string>
    <string name="aeq5o2">Sloth</string>
    <string name="aeq5o3">Wrath</string>
    <string name="aeq5o4">Lust</string>
    <string name="settings">Settings</string>
    <string name="theme">Select Theme</string>
</resources>